feat: add logic test